Fix avatar upload button z-index on channel edit page

--- a/ui/scss/component/_channel.scss
+++ b/ui/scss/component/_channel.scss
@@ -267,6 +267,17 @@ $actions-z-index: 2;
   min-width: 0;
   width: 100%;
 
+  .channel__edit-thumb {
+    z-index: 5;
+    .button--alt {
+      border: 1px solid rgba(var(--color-primary-dynamic), 0.1);
+      &:hover {
+        background-color: var(--color-button-alt-bg);
+        color: var(--color-primary);
+      }
+    }
+  }
+
   @media (max-width: $breakpoint-small) {
     padding-left: var(--spacing-m);
     margin-top: calc(var(--channel-thumbnail-width) + var(--spacing-l));
